# dzen_comenter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Claude.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  model_comparison.docx  prompt_config.example.json  pyproject.toml  requirements.txt  runtime_config.example.json  ТЗ_Dzen_Commenter.docx
.claude/agents/: coder.md  tester.md
.codex/agents/: coder.toml  tester.toml
.playwright-mcp/: page-2026-06-19T13-04-47-014Z.yml  page-2026-06-19T13-05-27-911Z.yml  page-2026-06-19T13-05-50-522Z.yml  page-2026-06-19T13-06-33-326Z.yml  page-2026-06-19T13-07-07-980Z.yml  page-2026-06-19T13-07-28-686Z.yml  page-2026-06-19T13-07-44-936Z.yml
artifacts/dzen-html/: all_comments.html  login.html  reply.html  state.html  view-source_https___dzen.ru_domeoremont.html  view_source_https_id_vk_com_auth_app_id=51441269&response_type=silent.html
config/: runtime_config.json
docker/: entrypoint.sh
dzen_commenter/admin/: app.py  auth.py  config.py  queries.py  validation.py
dzen_commenter/ai/: __init__.py  factory.py  gigachat.py  openai_compatible.py  yandexgpt.py
dzen_commenter/auth/: __init__.py  dzen_login.py  telegram_auth_assistant.py
dzen_commenter/browser/: __init__.py  session_manager.py
dzen_commenter/config/: runtime_config.py  settings.py
dzen_commenter/contracts/: enums.py  interfaces.py  models.py
dzen_commenter/db/: models.py  repository.py
dzen_commenter/dzen/: __init__.py  page.py  selectors.py
tests/: test_admin_app_import.py  test_main.py  test_stage14_regressions.py
(+67 files in other folders)
